--- a/README.org
+++ b/README.org
@@ -1,15 +1,21 @@
 #+DATE: 2019/03/07 23:41:48
 
+** Byebye Emacs
+
+中文 + Windows = 不爽！Byebye emacs.
+
+[[./preview/byebye.jpg]]
+
 ** Introduction
 
  Here is my emacs' tree.
 
- [[./preview/emacs.png]] 
+ [[./preview/emacs.png]]
 
 ** Installation
 
 Just clone this repo to you home.
-   
+
 #+BEGIN_SRC sh
   git clone https://github.com/loveminimal/emacs.d.git ~/.emacs.d
 #+END_SRC
